--- a/package.json
+++ b/package.json
@@ -26,5 +26,17 @@
   "repository": {
     "type": "git",
     "url": "git@github.com:KsAkira10/cra-template-test.git"
+  },
+  "devDependencies": {
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "jest-enzyme": "^7.1.2",
+    "node-sass": "^4.13.0"
+  },
+  "dependencies": {
+    "prop-types": "^15.7.2",
+    "redux": "^4.0.4",
+    "redux-observable": "^1.2.0",
+    "rxjs": "^6.5.3"
   }
 }
