chore(package): add @scope

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cra-template-test",
+  "name": "@ksakira10/cra-template-test",
   "version": "0.1.0",
   "description": "This is the base template for Test projects made for reactjs.",
   "main": "template.json",
