--- a/package.json
+++ b/package.json
@@ -28,10 +28,26 @@
     "url": "git@github.com:KsAkira10/cra-template-test.git"
   },
   "devDependencies": {
+    "@babel/preset-flow": "^7.7.4",
+    "babel-eslint": "^10.0.3",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
+    "eslint": "^6.7.2",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-config-react-app": "^5.1.0",
+    "eslint-plugin-flowtype": "^4.5.2",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-jest": "^23.1.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "flow-bin": "^0.114.0",
     "jest-enzyme": "^7.1.2",
-    "node-sass": "^4.13.0"
+    "node-sass": "^4.13.0",
+    "prettier": "^1.19.1",
+    "pretty-quick": "^2.0.1",
+    "source-map-explorer": "^2.1.2"
   },
   "dependencies": {
     "prop-types": "^15.7.2",
