--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "node-sass": "^4.13.0",
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1",
-    "source-map-explorer": "^2.1.2"
+    "source-map-explorer": "^2.1.2",
+    "serve": "^11.2.0"
   },
   "dependencies": {
     "prop-types": "^15.7.2",
