--- a/package.json
+++ b/package.json
@@ -48,11 +48,13 @@
     "node-sass": "^4.13.0",
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1",
-    "source-map-explorer": "^2.1.2",
-    "serve": "^11.2.0"
+    "serve": "^11.2.0",
+    "source-map-explorer": "^2.1.2"
   },
   "dependencies": {
     "prop-types": "^15.7.2",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
     "redux-observable": "^1.2.0",
     "rxjs": "^6.5.3"
