--- a/template/docker-compose.yml
+++ b/template/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3.2"
 services:
-  docker-nginx-react-runtime-env:
-    image: ksakira10/docker-nginx-react-runtime-env
+  react-app:
+    image: ksakira10/react-app
     ports:
       - "5000:80"
     environment:
-      - "REACT_APP_API_URL=http://api.example.com"
+      - REACT_APP_API_URL=http://api.example.com
