fix: move script to folder template

--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   "readme": "README.md",
   "files": [
     "template",
-    "template.json",
-    "dev.template.json"
+    "template.json"
   ],
   "engines": {
     "node": ">=8.10"
